fix: wildcard CORS origin patterns with credentials and add health endpoint